# morse-encoder

./: CMakeLists.txt  README.md  main.cpp
include/: encoder.hpp
src/: encoder.cpp
test/: CMakeLists.txt  test.cpp
